# [1.6.xx] - 2019-06-03

## Updated/fixes

- updated drop downs (`max-height` limit, plus shadows/etc.)
- fixed `viewbox` for some icons/simplified documentation
- renamed some classes for CSS multicolumns (consistency)
- renamed some Sass variables for better consistency
- added documentation about width helpers


# [1.6.12] - 2019-05-29

## New

- added `alignbaseline` helper class

## Updated/fixes

- fixed big screen adaptation

## Misc

- Add SVG illustrations


# [1.6.11] - 2019-05-28

## New

- added `--width-sidebar`, `--width-subnav` and `--body-fontsize` CSS variables
- added `pm-field--highlight` modifier
- added `meter` bars styles for settings
- POC screen adaptation for very large screens (to test)

## Updated/fixes

- added state class `is-disabled` for buttons
- increased tooltips width
- fix icon positionning in aside bar


# [1.6.10] - 2019-05-23

## New

- added icon `shape-lock`
- added `block-info-success`/`block-info-standard-success` in containers

## Updated/fixes

- Updated fake checkbox in conversations (WIP)
- Reseted `figure` default browsers styles


# [1.6.9] - 2019-05-22

## New

- sticky header for settings (using `.sticky-title` class, and `sticky-title--onTop` modifier to remove `box-shadow` at the top, has to be managed via JS)
- added container `container-section-sticky` class for pages using sticky header (for each section)
- also added modifier `container-section-sticky--fullwidth` modifier class to remove `max-width` if needed.
- updated smooth scrolling feature on Design System website (used https://github.com/zengabor/zenscroll)

## Updated/fixes

- update modal positionning (WIP for Safari bugs)
- updated `pm-label` class (set up to `width` to avoid bad alignments and add `padding` to the right)
- removed decoration from `pm-buttons` (except for `.pm-button--link`)
- added examples of vertical centering in forms


# [1.6.8] - 2019-05-19

## New

- add `capitalize` helper


# [1.6.7] - 2019-05-14

## Updated/fixes
