@@ -1,32 +1,32 @@
 /*
- * Conversations
+ * items (conversations/contacts lists)
  */
 
-.conversations-column-list {
+.items-column-list {
   width: calc( (100% + var(--width-sidebar, #{$width-sidebar}) ) * #{$conversations-column-width/1%/100} );
   border-right: 1px solid $pm-global-border;
 }
 
-.conversations-column-list,
-.conversation-column-detail {
+.items-column-list,
+.item-column-detail {
   height: calc(100vh - #{$header-height} - #{$toolbar-height} );
 }
 
-.conversation-container,
-.conversation-container-row {
+.item-container,
+.item-container-row {
   padding: em(16) em(12);
   border-bottom: 1px solid $pm-global-border;
 }
-.conversation-container-row {
+.item-container-row {
   padding: em(8) em(12);
 }
 
-.conversation-is-selected {
+.item-is-selected {
   background: $conversation-selected-bg;
 }
 
 $conversation-icon-size: 4rem !default;
-.conversation-icon {
+.item-icon {
   width: $conversation-icon-size;
   height: $conversation-icon-size;
   font-size: 1.2rem;
@@ -34,17 +34,17 @@ $conversation-icon-size: 4rem !default;
   margin-right: 20px;
 }
 
-.conversation-checkbox {
-  & + .conversation-icon > .conversation-icon-fakecheck {
+.item-checkbox {
+  & + .item-icon > .item-icon-fakecheck {
     display: none;
   }
 
-  &:checked + .conversation-icon {
+  &:checked + .item-icon {
     background-color: $pm-blue;
-    & > .conversation-abbr {
+    & > .item-abbr {
       display: none;
     }
-    & > .conversation-icon-fakecheck {
+    & > .item-icon-fakecheck {
       display: flex;
       
       animation: conversationIconIn ease .15s;
@@ -62,7 +62,7 @@ $conversation-icon-size: 4rem !default;
 }
 
 
-.conversation-titlesender {
+.item-titlesender {
   line-height: 1.3;
 }
 
@@ -91,7 +91,7 @@ $conversation-icon-size: 4rem !default;
 }
 
 /*
- * Conversations messages
+ * view messages
  */
 .message-container {
   border: 1px solid $pm-global-border;
