@@ -9,26 +9,26 @@ section: design
 ---
 
 <div class="flex flex-nowrap">
-  <div class="conversations-column-list scroll-if-needed scroll-smooth-touch">
+  <div class="items-column-list scroll-if-needed scroll-smooth-touch">
 
-    <label class="conversation-container flex bg-global-light">
-        <input type="checkbox" class="conversation-checkbox sr-only">
-        <span class="conversation-icon flex-item-noshrink rounded50 bg-white inline-flex">
-          <span class="mauto conversation-abbr">AY</span>
-          <span class="conversation-icon-fakecheck mauto">
+    <label class="item-container flex bg-global-light">
+        <input type="checkbox" class="item-checkbox sr-only">
+        <span class="item-icon flex-item-noshrink rounded50 bg-white inline-flex">
+          <span class="mauto item-abbr">AY</span>
+          <span class="item-icon-fakecheck mauto">
             <svg viewBox="0 0 16 16" class="icon-20p fill-white mauto " aria-hidden="true" role="img" focusable="false">
               <use xlink:href="#shape-on"></use>
             </svg>
           </span>
         </span>
-        <div class="flex-item-fluid flex flex-column flex-spacebetween conversation-titlesender">
+        <div class="flex-item-fluid flex flex-column flex-spacebetween item-titlesender">
           <div class="flex">
             <div class="flex-item-fluid w0 pr1"><span class="inbl mw100 ellipsis">Meetup Ring blah blah</span></div>
-            <div class="conversation-date">Apr. 08 2018</div>
+            <div class="item-date">Apr. 08 2018</div>
           </div>
           <div class="flex">
             <div class="flex-item-fluid pr1"><span class="inbl mw100 ellipsis">Bilbo, Frodo</span></div>
-              <div class="conversation-icons">
+              <div class="item-icons">
                 <svg viewBox="0 0 16 16" class="icon-16p fill-global-success" role="img" focusable="false">
                   <use xlink:href="#shape-attach"></use>
                 </svg> 
@@ -44,24 +44,24 @@ section: design
           </div>
         </div>
     </label>
-    <label class="conversation-container flex bg-global-light">
-        <input type="checkbox" class="conversation-checkbox sr-only">
-        <span class="conversation-icon flex-item-noshrink rounded50 bg-white inline-flex">
-          <span class="mauto conversation-abbr">SA</span>
-          <span class="conversation-icon-fakecheck mauto">
+    <label class="item-container flex bg-global-light">
+        <input type="checkbox" class="item-checkbox sr-only">
+        <span class="item-icon flex-item-noshrink rounded50 bg-white inline-flex">
+          <span class="mauto item-abbr">SA</span>
+          <span class="item-icon-fakecheck mauto">
             <svg viewBox="0 0 16 16" class="icon-20p fill-white mauto " aria-hidden="true" role="img" focusable="false">
               <use xlink:href="#shape-on"></use>
             </svg>
           </span>
         </span>
-        <div class="flex-item-fluid flex flex-column flex-spacebetween conversation-titlesender">
+        <div class="flex-item-fluid flex flex-column flex-spacebetween item-titlesender">
           <div class="flex">
             <div class="flex-item-fluid w0 pr1"><span class="inbl mw100 ellipsis">Palantir specs</span></div>
-            <div class="conversation-date">Apr. 08 2018</div>
+            <div class="item-date">Apr. 08 2018</div>
           </div>
           <div class="flex">
             <div class="flex-item-fluid pr1"><span class="inbl mw100 ellipsis">Saruman</span></div>
-              <div class="conversation-icons">
+              <div class="item-icons">
                 <span class="badgeLabel-success">ToDo</span>
                 <svg viewBox="0 0 16 16" class="icon-16p fill-global-warning" role="img" focusable="false">
                   <use xlink:href="#shape-expiration"></use>
@@ -81,24 +81,24 @@ section: design
           </div>
         </div>
     </label>
-    <label class="conversation-container flex bg-global-white">
-        <input type="checkbox" class="conversation-checkbox sr-only">
-        <span class="conversation-icon flex-item-noshrink rounded50 bg-white inline-flex">
-          <span class="mauto conversation-abbr">SA</span>
-          <span class="conversation-icon-fakecheck mauto">
+    <label class="item-container flex bg-global-white">
+        <input type="checkbox" class="item-checkbox sr-only">
+        <span class="item-icon flex-item-noshrink rounded50 bg-white inline-flex">
+          <span class="mauto item-abbr">SA</span>
+          <span class="item-icon-fakecheck mauto">
             <svg viewBox="0 0 16 16" class="icon-20p fill-white mauto " aria-hidden="true" role="img" focusable="false">
               <use xlink:href="#shape-on"></use>
             </svg>
           </span>
         </span>
-        <div class="flex-item-fluid flex flex-column flex-spacebetween conversation-titlesender">
+        <div class="flex-item-fluid flex flex-column flex-spacebetween item-titlesender">
           <div class="flex">
             <div class="flex-item-fluid w0 pr1"><span class="inbl mw100 ellipsis bold">Helm meetup</span></div>
-            <div class="conversation-date">Apr. 06 2018</div>
+            <div class="item-date">Apr. 06 2018</div>
           </div>
           <div class="flex">
             <div class="flex-item-fluid pr1"><span class="inbl mw100 ellipsis bold">Saruman</span></div>
-              <div class="conversation-icons">
+              <div class="item-icons">
                 <svg viewBox="0 0 16 16" class="icon-16p fill-global-success" role="img" focusable="false">
                   <use xlink:href="#shape-attach"></use>
                 </svg> 
@@ -114,24 +114,24 @@ section: design
           </div>
         </div>
     </label>
-    <label class="conversation-container flex bg-global-white">
-        <input type="checkbox" class="conversation-checkbox sr-only">
-        <span class="conversation-icon flex-item-noshrink rounded50 bg-white inline-flex">
-          <span class="mauto conversation-abbr">SA</span>
-          <span class="conversation-icon-fakecheck mauto">
+    <label class="item-container flex bg-global-white">
+        <input type="checkbox" class="item-checkbox sr-only">
+        <span class="item-icon flex-item-noshrink rounded50 bg-white inline-flex">
+          <span class="mauto item-abbr">SA</span>
+          <span class="item-icon-fakecheck mauto">
             <svg viewBox="0 0 16 16" class="icon-20p fill-white mauto " aria-hidden="true" role="img" focusable="false">
               <use xlink:href="#shape-on"></use>
             </svg>
           </span>
         </span>
-        <div class="flex-item-fluid flex flex-column flex-spacebetween conversation-titlesender">
+        <div class="flex-item-fluid flex flex-column flex-spacebetween item-titlesender">
           <div class="flex">
             <div class="flex-item-fluid w0 pr1"><span class="inbl mw100 ellipsis bold">Tr. Spec for huruk-haïs</span></div>
-            <div class="conversation-date">Apr. 05 2018</div>
+            <div class="item-date">Apr. 05 2018</div>
           </div>
           <div class="flex">
             <div class="flex-item-fluid pr1"><span class="inbl mw100 ellipsis bold">Saruman, Sauron, Morgot</span></div>
-              <div class="conversation-icons">
+              <div class="item-icons">
                 <svg viewBox="0 0 16 16" class="icon-16p fill-global-success" role="img" focusable="false">
                   <use xlink:href="#shape-attach"></use>
                 </svg> 
@@ -147,24 +147,24 @@ section: design
           </div>
         </div>
     </label>
-    <label class="conversation-container flex bg-global-light">
-        <input type="checkbox" class="conversation-checkbox sr-only">
-        <span class="conversation-icon flex-item-noshrink rounded50 bg-white inline-flex">
-          <span class="mauto conversation-abbr">GA</span>
-          <span class="conversation-icon-fakecheck mauto">
+    <label class="item-container flex bg-global-light">
+        <input type="checkbox" class="item-checkbox sr-only">
+        <span class="item-icon flex-item-noshrink rounded50 bg-white inline-flex">
+          <span class="mauto item-abbr">GA</span>
+          <span class="item-icon-fakecheck mauto">
             <svg viewBox="0 0 16 16" class="icon-20p fill-white mauto " aria-hidden="true" role="img" focusable="false">
               <use xlink:href="#shape-on"></use>
             </svg>
           </span>
         </span>
-        <div class="flex-item-fluid flex flex-column flex-spacebetween conversation-titlesender">
+        <div class="flex-item-fluid flex flex-column flex-spacebetween item-titlesender">
           <div class="flex">
             <div class="flex-item-fluid w0 pr1"><span class="inbl mw100 ellipsis">Tr. Gondor, Arnor </span></div>
-            <div class="conversation-date">Apr. 04 1213</div>
+            <div class="item-date">Apr. 04 1213</div>
           </div>
           <div class="flex">
             <div class="flex-item-fluid pr1"><span class="inbl mw100 ellipsis">GrandPa, Ellessar, Aragorn</span></div>
-              <div class="conversation-icons">
+              <div class="item-icons">
                 <span class="badgeLabel-warning">Complicated</span>
                 <button class="starbutton relative starbutton--is-stared js-starbutton">
                     <svg viewBox="0 0 16 16" class="icon-16p starbutton-icon-star" role="img" focusable="false">
@@ -178,24 +178,24 @@ section: design
           </div>
         </div>
     </label>
-    <label class="conversation-container flex bg-global-light flex-nowrap">
-        <input type="checkbox" class="conversation-checkbox sr-only">
-        <span class="conversation-icon flex-item-noshrink rounded50 bg-white inline-flex">
-          <span class="mauto conversation-abbr">JT</span>
-          <span class="conversation-icon-fakecheck mauto">
+    <label class="item-container flex bg-global-light flex-nowrap">
+        <input type="checkbox" class="item-checkbox sr-only">
+        <span class="item-icon flex-item-noshrink rounded50 bg-white inline-flex">
+          <span class="mauto item-abbr">JT</span>
+          <span class="item-icon-fakecheck mauto">
             <svg viewBox="0 0 16 16" class="icon-20p fill-white mauto " aria-hidden="true" role="img" focusable="false">
               <use xlink:href="#shape-on"></use>
             </svg>
           </span>
         </span>
-        <div class="flex-item-fluid flex flex-column flex-spacebetween conversation-titlesender">
+        <div class="flex-item-fluid flex flex-column flex-spacebetween item-titlesender">
           <div class="flex">
             <div class="flex-item-fluid w0 pr1"><span class="inbl mw100 ellipsis">A very loooooooooooooooooooong subject, for example Silmarillion story, blablablabla </span></div>
-            <div class="conversation-date flex-item-noflex">Apr. 01 1000</div>
+            <div class="item-date flex-item-noflex">Apr. 01 1000</div>
           </div>
           <div class="flex">
             <div class="flex-item-fluid pr1"><span class="inbl mw100 ellipsis">Test</span></div>
-              <div class="conversation-icons">
+              <div class="item-icons">
 
                 <button class="starbutton relative starbutton--is-stared js-starbutton">
                     <svg viewBox="0 0 16 16" class="icon-16p starbutton-icon-star" role="img" focusable="false">
@@ -209,24 +209,24 @@ section: design
           </div>
         </div>
     </label>
-    <label for="id_field_osef" class="conversation-container conversation-is-selected flex bg-global-light flex-nowrap">
-        <input type="checkbox" class="conversation-checkbox sr-only" checked id="id_field_osef">
-        <span class="conversation-icon flex-item-noshrink rounded50 bg-white inline-flex">
-          <span class="mauto conversation-abbr">JT</span>
-          <span class="conversation-icon-fakecheck mauto">
+    <label for="id_field_osef" class="item-container item-is-selected flex bg-global-light flex-nowrap">
+        <input type="checkbox" class="item-checkbox sr-only" checked id="id_field_osef">
+        <span class="item-icon flex-item-noshrink rounded50 bg-white inline-flex">
+          <span class="mauto item-abbr">JT</span>
+          <span class="item-icon-fakecheck mauto">
             <svg viewBox="0 0 16 16" class="icon-20p fill-white mauto " aria-hidden="true" role="img" focusable="false">
               <use xlink:href="#shape-on"></use>
             </svg>
           </span>
         </span>
-        <div class="flex-item-fluid flex flex-column flex-spacebetween conversation-titlesender">
+        <div class="flex-item-fluid flex flex-column flex-spacebetween item-titlesender">
           <div class="flex">
             <div class="flex-item-fluid w0 pr1"><span class="inbl mw100 ellipsis">Love story</span></div>
-            <div class="conversation-date">Apr. 01 999</div>
+            <div class="item-date">Apr. 01 999</div>
           </div>
           <div class="flex">
             <div class="flex-item-fluid w0 pr1"><span class="inbl mw100 ellipsis">Luthien, Beren and all their friends, looong topic to see ellipsis, lorem dolor ipsum dolor si frodon</span></div>
-              <div class="conversation-icons">
+              <div class="item-icons">
 
                 <button class="starbutton relative starbutton--is-stared js-starbutton">
                     <svg viewBox="0 0 16 16" class="icon-16p starbutton-icon-star" role="img" focusable="false">
@@ -241,23 +241,23 @@ section: design
         </div>
       </label>
     {% for i in (1..5) %}
-    <label class="conversation-container flex bg-global-light">
-        <input type="checkbox" class="conversation-checkbox sr-only">
-        <span class="conversation-icon flex-item-noshrink rounded50 bg-white inline-flex">
-          <span class="mauto conversation-abbr">PM</span>
-          <span class="conversation-icon-fakecheck mauto">
+    <label class="item-container flex bg-global-light">
+        <input type="checkbox" class="item-checkbox sr-only">
+        <span class="item-icon flex-item-noshrink rounded50 bg-white inline-flex">
+          <span class="mauto item-abbr">PM</span>
+          <span class="item-icon-fakecheck mauto">
             <svg viewBox="0 0 16 16" class="icon-20p fill-white mauto " aria-hidden="true" role="img" focusable="false">
               <use xlink:href="#shape-on"></use>
             </svg>
           </span>
         </span>
-        <div class="flex-item-fluid flex flex-column flex-spacebetween conversation-titlesender">
+        <div class="flex-item-fluid flex flex-column flex-spacebetween item-titlesender">
           <div class="flex">
             <div class="flex-item-fluid w0 pr1"><span class="inbl mw100 ellipsis">Another for scrolling</span></div>
-            <div class="conversation-date">Apr. 08 998</div>
+            <div class="item-date">Apr. 08 998</div>
           </div>
           <div class="flex">
-              <div class="conversation-icons">
+              <div class="item-icons">
                 <svg viewBox="0 0 16 16" class="icon-16p fill-global-success" role="img" focusable="false">
                   <use xlink:href="#shape-attach"></use>
                 </svg> 
@@ -276,7 +276,7 @@ section: design
     {% endfor %}
     
   </div>
-  <div class="conversation-column-detail p2 flex-item-fluid scroll-if-needed">
+  <div class="view-column-detail p2 flex-item-fluid scroll-if-needed">
     <h2>Collapsed</h2>
 
     <div class="message-container">
