@@ -3,6 +3,7 @@
 ## Updated/fixes
 
 - updated drop downs (`max-height` limit, plus shadows/etc.)
+- updated classnames for conversation lists (for `item-`, more generic, as it is used in contacts)
 - fixed `viewbox` for some icons/simplified documentation
 - renamed some classes for CSS multicolumns (consistency)
 - renamed some Sass variables for better consistency
